# bazel-config

./: BUILD.bazel  README.md  WORKSPACE  docker-compose.json  package.json  tsconfig.json
config/: BUILD.bazel  generate-client-env.ts  generate-k8s-config.ts  generate-k8s-configs.ts  generate-k8s-secrets.ts
config/configs/: config.schema.json  staging.config.json
