load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

exports_files(["tsconfig.json"])

k8s_objects(
    name = "k8s",
    objects = [
        "//config:config",
        "//config:secrets",
    ],
)

k8s_objects(
    name = "microk8s",
    objects = [
        "//config:microk8s_config",
        "//config:microk8s_secrets",
    ],
)
