load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

string_flag(
    name = "env",
    build_setting_default = "dev",
)

config_setting(
    name = "env_prod",
    flag_values = {
        ":env": "prod",
    },
)

config_setting(
    name = "env_staging",
    flag_values = {
        ":env": "staging",
    },
)

config_setting(
    name = "env_dev",
    flag_values = {
        ":env": "dev",
    },
)

k8s_objects(
    name = "k8s",
    objects = [
        "//config:config",
        "//config:secrets",
    ],
)

k8s_objects(
    name = "microk8s",
    objects = [
        "//config:microk8s_config",
        "//config:microk8s_secrets",
    ],
)
